# trading-discipline

./: .env.example  .gitignore  Dockerfile  README.md  RUNBOOK.md  design.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
deploy/: btc-discipline.service
dev-docs/: change-log.md
dev-docs/generic-prompts/: vibe-coding-prompt-templates.md
dev-docs/phase-1/: requirements.md  tasks.md
dev-docs/phase-1.2/: design.md  requirements.md  tasks.md  vibe-coding-prompt.md
dev-docs/phase-1.3/: design.md  requirements.md  tasks.md  vibe-coding-prompt.md
dev-docs/phase-2/: design.md  requirements.md  spec-finetune-prompt.md  tasks.md  v2-intelligence-research.html  v2-intelligence-research.md
src/: __init__.py  app.py  config.py
src/bot/: edit_closed.py  formatting.py  forms.py  handlers.py  whitelist.py
src/db/: __init__.py  keyspace.py  migrations.py  repo.py
src/events/: __init__.py  bus.py
src/exchange/: __init__.py  base.py  binance.py  bybit.py  hyperliquid.py
src/intelligence/: __init__.py
src/models/: __init__.py  alert.py  breach.py  conversation.py  events.py  signal.py  trade.py
src/monitor/: __init__.py  alerts.py  breach.py  health.py  monitor.py
src/rules/: __init__.py  context.py  impact.py  leverage.py  sizing.py  validation.py
src/stats/: __init__.py  calculator.py  report.py
tests/: conftest.py
tests/adapter/: test_hyperliquid.py
tests/e2e/: __init__.py  test_flows.py  test_multi_symbol_breach.py
tests/integration/: __init__.py  conftest.py  test_app_startup.py  test_error_handling.py  test_form_symbol_step.py  (+13 more)
(+29 files in other folders)
