[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "btc-discipline-bot"
version = "0.1.0"
description = "Single-user Telegram BTC trading-discipline bot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler",
    "black",
    "freezegun",
    "httpx",
    "mypy",
    "pydantic>=2",
    "pydantic-settings>=2",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "python-telegram-bot>=20",
    "redis>=5",
    "ruff",
    "structlog",
    "websockets",
]

[tool.setuptools.packages.find]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-m 'not network'"
markers = [
    "network: tests that require live network access",
]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["apscheduler.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["src"]
